grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements
    directive: $ => seq(
      '##',
      'codon:',
      field('key', $.identifier),
      '=',
      field('value', choice($.integer, $.identifier)),
    ),

    import_from_statement: $ => seq(
      'from',
      field('module_name', choice(
        $.relative_import,
        $.dotted_name,
        // Codon: from C import
        'C',
        'python',
      )),
      'import',
      choice(
        $.wildcard_import,
        $._import_list,
        seq('(', $._import_list, ')'),
      ),
    ),

    _import_list: $ => seq(
      commaSep1(field('name', choice(
        $.dotted_name,
        $.aliased_import,
        // Codon: typed C imports like `foo: int`
        $.c_typed_import,
      ))),
      optional(','),
    ),

    // Codon: from C import foo: int
    c_typed_import: $ => seq(
      field('name', $.dotted_name),
      ':',
      field('type', $.type),
    ),

    expression_statement: $ => choice(
      $.expression,
      seq(commaSep1($.expression), optional(',')),
      $.assignment,
      $.augmented_assignment,
      $.yield,
    ),

    pass_statement: $ => prec.left('pass'),
    match_statement: $ => seq(
      'match',
      field('subject', commaSep1($.expression)),
      ':',
      repeat1($.case_clause),
    ),

    case_clause: $ => seq(
      'case',
      field('pattern', commaSep1($.case_pattern)),
      optional(field('guard', $.if_clause)),
      ':',
      field('consequence', $._suite),
    ),

    // Pattern rules for match/case
    // _closed_pattern: patterns that don't include or_pattern (avoids left-recursion)
    literal_pattern: $ => choice(
      $.string,
      $.concatenated_string,
      $.integer,
      $.float,
      $.true,
      $.false,
      $.none,
    ),

    wildcard_pattern: $ => '_',

    function_definition: $ => seq(
      optional('async'),
      'def',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameter)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $.type))),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    class_definition: $ => seq(
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameter)),
      optional(field('superclasses', $.argument_list)),
      ':',
      field('body', $._suite),
    ),

    // Codon: generic type parameters [T, N: int]
    type_parameter: $ => seq(
      '[',
      commaSep1(choice(
        $.type,
        $.type_parameter_constraint,
      )),
      optional(','),
      ']',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(choice(
        $.expression,
        $.list_splat,
        $.dictionary_splat,
        $.parenthesized_list_splat,
        $.keyword_argument,
      ))),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec(1, sep1($.identifier, '.')),

    // Parameters
    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    pipe_expression: $ => prec.left(PREC.pipe, seq(
      field('left', $.expression),
      field('operator', choice('|>', '||>')),
      field('right', $.expression),
    )),

    range_expression: $ => prec(PREC.range, seq(
      field('start', $.integer),
      '...',
      field('end', $.integer),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    type: $ => choice(
      $.expression,
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),

    generic_type: $ => prec(1, seq(
      $.identifier,
      $.type_parameter,
    )),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $._string_content)),
      $.string_end,
    ),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/),
          optional(/[jJ]/),
        ),
      ),
    )),

    identifier: $ => /[_\p{XID_Start}][_\p{XID_Continue}]*/u,
